--- a/Website/style.css
+++ b/Website/style.css
@@ -46,7 +46,7 @@ h6 {
 a {
 text-decoration: none;
 color: #FF6A00;
-margin: 0px;
+margin: 0;
 }
 
 p {
@@ -55,8 +55,8 @@ p {
 	color: white;
 	margin-left: 10px;
 	margin-right: 10px;
-    margin-top: 0px;
-    margin-bottom: 0px;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 p.thick {
